Add search by dates functionality, refactor styles

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -74,6 +74,10 @@ body {
     color: white;
 }
 
+#select-type, #select-search-airport, #select-search-airline {
+    width: 100%;
+}
+
 a {
     text-decoration: none;
 }
