--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -34,11 +34,11 @@
             </div>
             <div class="mb-6">
                 <label for="username" class="form-label text-white">Username</label>
-                <input class="form-control" type="email" id="username" name="username" required/>
+                <input class="form-control bg-transparent text-white" type="email" id="username" name="username" required/>
             </div>
             <div class="mb-6">
                 <label for="username" class="form-label text-white">Password</label>
-                <input class="form-control" type="password" id="password" name="password" required/>
+                <input class="form-control bg-transparent text-white" type="password" id="password" name="password" required/>
             </div>
             <br>
             <br>
