--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -37,7 +37,7 @@
                     <div class="row mb-3">
                         <label id="signin_label" for="inputEmail" class="col-sm-2 col-form-label">Email</label>
                         <div class="col-sm-7">
-                            <input type="email" class="form-control" th:field="*{email}" id="inputEmail" required
+                            <input type="email" class="form-control bg-transparent text-white" th:field="*{email}" id="inputEmail" required
                                    placeholder="email@email.ro">
                             <span class="form-control alert alert-danger text-white" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
                         </div>
@@ -45,7 +45,7 @@
                     <div class="row mb-3">
                         <label id="signin_label" for="password" class="col-sm-2 col-form-label">Password</label>
                         <div class="col-sm-7">
-                            <input type="password" class="form-control" th:field="*{password}" id="password" required
+                            <input type="password" class="form-control bg-transparent text-white" th:field="*{password}" id="password" required
                                    placeholder="min 6 characters">
                             <span class="form-control alert alert-danger text-white" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
                         </div>
@@ -53,14 +53,14 @@
                     <div class="row mb-3">
                         <label id="signin_label" for="firstName" class="col-sm-2 col-form-label">First Name</label>
                         <div class="col-sm-7">
-                            <input type="text" class="form-control" th:field="*{firstName}" id="firstName" required>
+                            <input type="text" class="form-control bg-transparent text-white" th:field="*{firstName}" id="firstName" required>
                             <span class="form-control alert alert-danger text-white" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></span>
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label id="signin_label" for="lastName" class="col-sm-2 col-form-label">Last Name</label>
                         <div class="col-sm-7">
-                            <input type="text" class="form-control" th:field="*{lastName}" id="lastName" required>
+                            <input type="text" class="form-control bg-transparent text-white" th:field="*{lastName}" id="lastName" required>
                             <span class="form-control alert alert-danger text-white" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></span>
                         </div>
                     </div>
